--- a/src/app/dog/dog.component.html
+++ b/src/app/dog/dog.component.html
@@ -1,10 +1,7 @@
-<div class="wrapper">
-<ul>
-  <li *ngFor="let dog of dogs" class="puppy-wrapper">
+<div *ngFor="let dog of dogs" class="puppy-wrapper">
+  <div class="puppy-description">
     {{ dog.id }}
-    <h2 class="puppy-name">{{ dog.name | uppercase }}</h2>
-    {{ dog.weight}}
-    <img src="{{dog.img}}" alt="" class="puppy-portrait">
-  </li>
-</ul>
+    <h2 class="puppy-name">{{ dog.name | uppercase }}</h2> {{ dog.weight}}
+  </div>
+  <img src="{{dog.img}}" alt="" class="puppy-portrait">
 </div>
