--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,9 +1,6 @@
 <ul>
-  <li><a href="../about">About</a></li>
-  <li><a href="../services">Services</a></li>
-  <li><a href="../home">Home</a></li>
-  <li><a href="../profile">Twój profil</a></li>
-  <li><a href="../dogs">Psy</a></li>
-  <li><a href="../cats">Koty</a></li>
-  <li><a href="../logout">Wyloguj</a></li>
-</ul>
+  <li><a routerLink="about">About</a></li>
+  <li><a routerLink="services">Services</a></li>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
