working at form

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,10 @@
-<ul>
-  <li><a routerLink="about">About</a></li>
-  <li><a routerLink="services">Services</a></li>
+<nav>
+  <ul>
+    <li><a routerLink="about">Strona główna</a></li>
+    <li><a routerLink="dogs">Opisy psów</a></li>
+    <li><a routerLink="form">Zamów psiaka</a></li>
+  </ul>
+</nav>
   <div class="container">
     <router-outlet></router-outlet>
   </div>
