--- a/src/assets/stylesheets/screen.css
+++ b/src/assets/stylesheets/screen.css
@@ -2,25 +2,28 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 6, ../sass/screen.scss */
+/* line 5, ../sass/screen.scss */
+body {
+  font: 16px lato;
+}
+
+/* line 8, ../sass/screen.scss */
 .wrapper {
   width: 500px;
   margin: 30px auto;
 }
 
-/* line 11, ../sass/screen.scss */
+/* line 13, ../sass/screen.scss */
 .app-title {
   font: bold 25px Lato;
   color: cornflowerblue;
-  text-align: center;
 }
 
-/* line 17, ../sass/screen.scss */
+/* line 18, ../sass/screen.scss */
 .puppy-wrapper {
   overflow: hidden;
   padding-top: 20px;
   padding-bottom: 20px;
-  font: 16px Lato;
   border-top: 1px solid silver;
   border-bottom: 1px solid silver;
 }
