--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,3 +1,12 @@
-<p>
-  form works!
-</p>
+<h3>Zapisz się do naszego newslettera</h3>
+<form action="">
+  <div>
+    <label for="name">Wpisz email</label>
+    <input type="text" id="name" placeholder="marta@gmail.com">
+  </div>
+  <div>
+    <label for="agree-box">Zgadzam się na postanowienia <a>regulaminu</a></label>
+    <input type="checkbox" id="agree-box">
+  </div>
+  <button>Wyślij</button>
+</form>
