working with rules

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
-<footer>
-  <div class="wrapper">
+<section class="container">
+  <footer class="col-md-6 offset-md-3">
     <p>Wszystkie prawa zastrzeżone</p>
     <app-form></app-form>
-  </div>
-</footer>
+  </footer>
+</section>
