--- a/src/app/dog/dog.component.html
+++ b/src/app/dog/dog.component.html
@@ -1,7 +1,9 @@
-<div *ngFor="let dog of dogs" class="puppy-wrapper">
-  <div class="puppy-description">
-    {{ dog.id }}
-    <h2 class="puppy-name">{{ dog.name | uppercase }}</h2> {{ dog.weight}}
+  <div class="row">
+    <div *ngFor="let dog of dogs" class="puppy-wrapper col-md-6 offset-md-3">
+      <div class="puppy-description">
+        {{ dog.id }}
+        <h2 class="puppy-name">{{ dog.name | uppercase }}</h2> {{ dog.weight}}
+      </div><!-- puppy descr -->
+      <img src="{{dog.img}}" alt="" class="puppy-portrait img-fluid">
+    </div>
   </div>
-  <img src="{{dog.img}}" alt="" class="puppy-portrait">
-</div>
