--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,9 +1,13 @@
-<nav>
-  <ul>
-    <li><a routerLink="about">Strona główna</a></li>
-    <li><a routerLink="dogs">Opisy psów</a></li>
-  </ul>
-</nav>
-  <div class="container">
-    <router-outlet></router-outlet>
+<section class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <nav>
+        <ul>
+          <li><a routerLink="about">Strona główna</a></li>
+          <li><a routerLink="dogs">Opisy psów</a></li>
+        </ul>
+      </nav>
+    </div>
   </div>
+<router-outlet></router-outlet>
+</section>
