--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,11 @@
-<section class="container">
-  <footer class="col-md-6 offset-md-3">
-    <p>Wszystkie prawa zastrzeżone</p>
-    <app-form></app-form>
-  </footer>
-</section>
+<footer class="navbar-default ">
+  <section class="container">
+    <div class="row">
+      <div class="col-md-8 offset-md-2 main-footer">
+      <div class="">
+        <p>Wszystkie prawa zastrzeżone</p>
+        </div>
+      </div>
+    </div>
+  </section>
+</footer>
