--- a/src/app/rules/rules.component.html
+++ b/src/app/rules/rules.component.html
@@ -1,3 +1,19 @@
-<p>
-  rules works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+    <h2 class="main-header">Regulamin</h2>
+      <ol>
+        <li>Nie będziesz miał innych piesków przede mną</li>
+        <li>Pamiętaj, by mnie wyprowadzać</li>
+        <li>Jeśli jestem głodny, to oznacza, że nie mogę czekać</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+    </div>
+  </div>
+</div>
