--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6 offset-md-3">
+    <div class="col-md-8 offset-md-2">
+      <h2 class="main-header">Witaj na naszej stronie</h2>
       <p>Zapraszamy do przeglądania informacji na temat psów</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor modi beatae in harum dolorum sequi sapiente, esse, recusandae perspiciatis. Eveniet voluptas nisi placeat architecto, sapiente maiores a nam exercitationem ratione.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima dolore maiores aspernatur, quisquam ipsum quod facilis consequatur consequuntur eius placeat, soluta eum in autem ullam ex iure doloribus nemo officiis!</p>
