--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,13 +1,14 @@
 <section class="container">
   <div class="row">
-    <div class="col-md-6 offset-md-3">
+    <div class="col-md-8 offset-md-2">
       <nav>
         <ul>
           <li><a routerLink="about">Strona główna</a></li>
           <li><a routerLink="dogs">Opisy psów</a></li>
+          <li><a routerLink="newsletter">Newsletter</a></li>
         </ul>
       </nav>
     </div>
   </div>
-<router-outlet></router-outlet>
 </section>
+<router-outlet></router-outlet>
