--- a/src/assets/stylesheets/screen.css
+++ b/src/assets/stylesheets/screen.css
@@ -2,18 +2,18 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 5, ../sass/screen.scss */
+/* line 10, ../sass/screen.scss */
 body {
   font: 16px lato;
 }
 
-/* line 10, ../sass/screen.scss */
+/* line 15, ../sass/screen.scss */
 .app-title {
   font: bold 25px Lato;
   color: cornflowerblue;
 }
 
-/* line 15, ../sass/screen.scss */
+/* line 20, ../sass/screen.scss */
 .puppy-wrapper {
   overflow: hidden;
   padding-top: 20px;
@@ -22,7 +22,7 @@ body {
   border-bottom: 1px solid silver;
 }
 
-/* line 27, ../sass/screen.scss */
+/* line 32, ../sass/screen.scss */
 .puppy-portrait {
   height: 100px;
   width: auto;
@@ -34,16 +34,29 @@ body {
   border: 1px solid cornflowerblue;
   padding: 1px;
 }
-/* line 37, ../sass/screen.scss */
+/* line 42, ../sass/screen.scss */
 .puppy-portrait:hover {
   transform: rotate(-2deg) scale(1.2);
 }
 
-/* line 43, ../sass/screen.scss */
+/* line 48, ../sass/screen.scss */
 .puppy-description {
   float: left;
 }
-/* line 45, ../sass/screen.scss */
+/* line 50, ../sass/screen.scss */
 .puppy-description .puppy-name {
   font-size: 20px;
+}
+
+/* line 54, ../sass/screen.scss */
+.main-footer {
+  background-color: #ffffff;
+  border-top: 1px solid cornflowerblue;
+  padding-top: 10px;
+}
+
+/* line 59, ../sass/screen.scss */
+.main-header {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
