some basic styling

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-8 offset-md-2">
       <nav>
-        <ul>
+        <ul class="main-nav">
           <li><a routerLink="about">Strona główna</a></li>
           <li><a routerLink="dogs">Opisy psów</a></li>
           <li><a routerLink="newsletter">Newsletter</a></li>
