--- a/src/assets/sass/screen.scss
+++ b/src/assets/sass/screen.scss
@@ -1,20 +1,17 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-//variables 
+
 $primary-bg-color: #ffffff;
 $primary-txt-color: cornflowerblue;
 $secondary-txt-color: black;
 
 body {
   font: 16px lato;
+  margin-top: 20px;
 }
 
 
 .app-title {
-  font: bold 25px Lato;
   color: $primary-txt-color;
+  margin-bottom: 20px;
 }
 
 .puppy-wrapper {
@@ -59,4 +56,25 @@ body {
 .main-header {
   margin-top: 30px;
   margin-bottom: 30px;
+}
+
+.main-nav {
+  list-style-type: none;
+  font: 700 16px Lato;
+  margin-bottom: 20px;
+  -webkit-padding-start: 0;
+}
+
+.main-nav li {
+  border: 1px dashed silver;
+  display: inline-block;
+}
+.main-nav li:hover {
+  background-color: silver;
+  color: white;
+}
+.main-nav li a {
+  text-decoration: none;
+  padding: 10px 15px;
+  display: inline-block;
 }
