added better form

--- a/src/app/rules/rules.component.html
+++ b/src/app/rules/rules.component.html
@@ -1,19 +1,22 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-8 offset-md-2">
-    <h2 class="main-header">Regulamin</h2>
-      <ol>
-        <li>Nie będziesz miał innych piesków przede mną</li>
-        <li>Pamiętaj, by mnie wyprowadzać</li>
-        <li>Jeśli jestem głodny, to oznacza, że nie mogę czekać</li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        <h2 class="main-header">Regulamin</h2>
+        <ol>
+          <li> Moje życie nie trwa długo. Każde rozstanie z tobą oznacza dla mnie cierpienie. Pomyśl o tym zanim mnie kupisz.</li>
+          <li>Daj mi czas na zrozumienie czego ode mnie oczekujesz.</li>
+          <li>Pozwól mi mieć zaufanie - ja tym żyje.</li>
+          <li>Nie gniewaj się na mnie i nie zamykaj mnie za karę. Ty masz swoją pracę i swoich przyjaciół - ja mam tylko ciebie.</li>
+          <li>Rozmawiaj ze mną. Nawet jeśli nie rozumiem słów, rozumiem twój głos.</li>
+          <li>Postępuj ze mną rozważnie - ja niczego nie zapominam.</li>
+          <li>Pamiętaj, zanim mnie uderzysz, że moje szczęki z łatwością mogłyby pogruchotać twoją rękę, a jednak nie robię z nich użytku, bo cie kocham.</li>
+          <li>Zanim mnie nazwiesz: niechętny, uparty, leniwy, zastanów się, może za długo musiałem siedzieć na słońcu, a może mam już nie całkiem sprawne serce.</li>
+          <li>Troszcz się o mnie, gdy się zestarzeje - ty także będziesz kiedyś stary.</li>
+          <li>Bądź ze mną w trudnych momentach mojego życia. Nie mów nigdy: "ja nie mogę na to patrzeć" albo "to ma się stać podczas mojej nieobecności". Wszystko jest łatwiejsze dla mnie, z tobą... nawet odejście z tego świata.</li>
+        </ol>
+        źródło <a href="http://homerek.bloog.pl/id,5747342,title,10-przykazan-dla-dobrego-wlasciciela-psa,index.html?smoybbtticaid=618600">Homerek.bloog</a>
+      </div>
     </div>
   </div>
-</div>
+</main>
