--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-6 offset-md-2">
-      <h1 class="app-title">{{title}}</h1>
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 offset-md-2">
+        <h1 class="app-title">{{title}}</h1>
+      </div>
     </div>
   </div>
-</div>
+</main>
