--- a/src/app/dog/dog.component.html
+++ b/src/app/dog/dog.component.html
@@ -7,7 +7,7 @@
           {{ dog.id }}
           <h2 class="puppy-name">{{ dog.name | uppercase }}</h2> {{ dog.weight}}
         </div>
-        <img src="{{dog.img}}" alt="" class="puppy-portrait img-fluid">
+          <img src="{{dog.img}}" alt="" class="puppy-portrait img-fluid" (click)="onSelect(dog)">
       </div>
     </div>
   </div>
