--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,9 @@
-<footer class="navbar-default ">
+<footer>
   <section class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2 main-footer">
-      <div class="">
-        <p>Wszystkie prawa zastrzeżone</p>
+        <div class="">
+          <p>Wszystkie prawa zastrzeżone</p>
         </div>
       </div>
     </div>
