--- a/src/app/newsletter/newsletter.component.html
+++ b/src/app/newsletter/newsletter.component.html
@@ -1,22 +1,26 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-8 offset-md-2">
-      <h2 class="main-header">Zapisz się do naszego newslettera</h2>
-      <form #form="ngForm" (ngSubmit)="submitForm(form.value)">
-        <div class="form-group">
-          <label for="email">Wpisz email</label>
-          <input type="email" name="email" id="email" placeholder="marta@gmail.com" ngModel required>
+<main>
+  <section class="newsletter">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 offset-md-2">
+          <h2 class="main-header">Zapisz się do naszego newslettera</h2>
+          <form #form="ngForm" (ngSubmit)="submitForm(form.value)">
+            <div class="form-group">
+              <label for="email">Wpisz email</label>
+              <input type="email" name="email" id="email" placeholder="marta@gmail.com" class="form-control" ngModel required>
+            </div>
+            <div class="form-group">
+              <label for="name">Wpisz swoje imie</label>
+              <input type="text" name="name" id="name" placeholder="marta" class="form-control" ngModel required>
+            </div>
+            <div class="form-group">
+              <label for="agree-box">Zgadzam się na postanowienia <a routerLink="../rules">regulaminu</a></label>
+              <input type="checkbox" name="submit" id="agree-box" ngModel required>
+            </div>
+            <button class="btn btn-primary">Wyślij</button>
+          </form>
         </div>
-        <div class="form-group">
-          <label for="name">Wpisz swoje imie</label>
-          <input type="text" name="name" id="name" placeholder="marta" ngModel required>
-        </div>
-        <div class="form-group">
-          <label for="agree-box">Zgadzam się na postanowienia <a routerLink="../rules">regulaminu</a></label>
-          <input type="checkbox" name="submit" id="agree-box" ngModel required>
-        </div>
-        <button class="btn btn-primary">Wyślij</button>
-      </form>
+      </div>
     </div>
-  </div>
-</div>
+  </section>
+</main>
