some minor changes

--- a/src/assets/sass/screen.scss
+++ b/src/assets/sass/screen.scss
@@ -10,7 +10,12 @@ body {
   color: $primary-txt-color;
   margin-bottom: 20px;
 }
-
+.site-logo:hover .app-title {
+  text-decoration: none;
+}
+.site-logo:hover {
+  text-decoration: none;
+}
 .puppy-wrapper {
   overflow: hidden;
   padding: {
