--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
 <main>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 offset-md-2">
-        <h1 class="app-title">{{title}}</h1>
+      <div class="col-md-2 offset-md-2">
+      </div>
+      <div class="col-md-4">
+        <a href="#" class="site-logo">
+          <img src="assets/img/logo.png" alt="sheep with suitcase" class="logo">
+          <h1 class="app-title">{{title}}</h1>
+        </a>
       </div>
     </div>
   </div>
