--- a/src/assets/stylesheets/screen.css
+++ b/src/assets/stylesheets/screen.css
@@ -10,7 +10,17 @@ body {
   margin-bottom: 20px;
 }
 
-/* line 14, ../sass/screen.scss */
+/* line 13, ../sass/screen.scss */
+.site-logo:hover .app-title {
+  text-decoration: none;
+}
+
+/* line 16, ../sass/screen.scss */
+.site-logo:hover {
+  text-decoration: none;
+}
+
+/* line 19, ../sass/screen.scss */
 .puppy-wrapper {
   overflow: hidden;
   padding-top: 20px;
@@ -19,7 +29,7 @@ body {
   border-bottom: 1px solid silver;
 }
 
-/* line 26, ../sass/screen.scss */
+/* line 31, ../sass/screen.scss */
 .puppy-portrait {
   height: 100px;
   width: auto;
@@ -31,22 +41,22 @@ body {
   border: 1px solid cornflowerblue;
   padding: 1px;
 }
-/* line 36, ../sass/screen.scss */
+/* line 41, ../sass/screen.scss */
 .puppy-portrait:hover {
   transform: rotate(-2deg) scale(1.2);
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
-/* line 42, ../sass/screen.scss */
+/* line 47, ../sass/screen.scss */
 .puppy-description {
   float: left;
 }
-/* line 44, ../sass/screen.scss */
+/* line 49, ../sass/screen.scss */
 .puppy-description .puppy-name {
   font-size: 20px;
 }
 
-/* line 49, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 .main-footer {
   background-color: #ffffff;
   border-top: 1px solid cornflowerblue;
@@ -54,13 +64,13 @@ body {
   margin-top: 30px;
 }
 
-/* line 56, ../sass/screen.scss */
+/* line 61, ../sass/screen.scss */
 .main-header {
   margin-top: 30px;
   margin-bottom: 30px;
 }
 
-/* line 61, ../sass/screen.scss */
+/* line 66, ../sass/screen.scss */
 .main-nav {
   list-style-type: none;
   font: 700 16px Lato;
@@ -68,37 +78,37 @@ body {
   -webkit-padding-start: 0;
 }
 
-/* line 68, ../sass/screen.scss */
+/* line 73, ../sass/screen.scss */
 .main-nav li {
   border: 1px dashed silver;
   display: inline-block;
 }
 
-/* line 73, ../sass/screen.scss */
+/* line 78, ../sass/screen.scss */
 .main-nav li:hover {
   background-color: silver;
   color: white;
 }
 
-/* line 78, ../sass/screen.scss */
+/* line 83, ../sass/screen.scss */
 .main-nav li a {
   text-decoration: none;
   padding: 10px 15px;
   display: inline-block;
 }
 
-/* line 84, ../sass/screen.scss */
+/* line 89, ../sass/screen.scss */
 .newsletter {
   padding-bottom: 30px;
   min-height: calc(100vh - 250px);
 }
 
-/* line 90, ../sass/screen.scss */
+/* line 95, ../sass/screen.scss */
 main {
   min-height: calc(100% - 20px);
 }
 
-/* line 94, ../sass/screen.scss */
+/* line 99, ../sass/screen.scss */
 body,
 html {
   min-height: 100%;
