--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -1,22 +1,21 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-//variables 
 $primary-bg-color: #ffffff;
 $primary-txt-color: cornflowerblue;
 $secondary-txt-color: black;
-
 body {
   font: 16px lato;
+  margin-top: 20px;
 }
-
 
 .app-title {
-  font: bold 25px Lato;
   color: $primary-txt-color;
+  margin-bottom: 20px;
 }
-
+.site-logo:hover .app-title {
+  text-decoration: none;
+}
+.site-logo:hover {
+  text-decoration: none;
+}
 .puppy-wrapper {
   overflow: hidden;
   padding: {
@@ -34,14 +33,14 @@ body {
   width: auto;
   float: right;
   margin-right: 20px;
-  transition:  0.3s ease;
+  transition: 0.3s ease;
   cursor: pointer;
   transform: rotate(0deg);
   border: 1px solid $primary-txt-color;
   padding: 1px;
   &:hover {
     transform: rotate(-2deg) scale(1.2);
-
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
   }
 }
 
@@ -51,12 +50,53 @@ body {
     font-size: 20px;
   }
 }
+
 .main-footer {
   background-color: $primary-bg-color;
   border-top: 1px solid $primary-txt-color;
   padding-top: 10px;
+  margin-top: 30px;
 }
+
 .main-header {
   margin-top: 30px;
   margin-bottom: 30px;
+}
+
+.main-nav {
+  list-style-type: none;
+  font: 700 16px Lato;
+  margin-bottom: 20px;
+  -webkit-padding-start: 0;
+}
+
+.main-nav li {
+  border: 1px dashed silver;
+  display: inline-block;
+}
+
+.main-nav li:hover {
+  background-color: silver;
+  color: white;
+}
+
+.main-nav li a {
+  text-decoration: none;
+  padding: 10px 15px;
+  display: inline-block;
+}
+
+.newsletter {
+  padding-bottom: 30px;
+  min-height: calc(100vh - 250px);
+}
+
+//footer at bottom 
+main {
+  min-height: calc(100% - 20px);
+}
+
+body,
+html {
+  min-height: 100%;
 }
