working at routing

--- a/src/app/dog/dog.component.html
+++ b/src/app/dog/dog.component.html
@@ -1,13 +1,15 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 offset-md-2">
-    <h2 class="main-header">Lista naszych pupili</h2>
+      <h2 class="main-header">Lista naszych pupili</h2>
       <div *ngFor="let dog of dogs" class="puppy-wrapper">
         <div class="puppy-description">
           {{ dog.id }}
           <h2 class="puppy-name">{{ dog.name | uppercase }}</h2> {{ dog.weight}}
         </div>
+        <a href="">
           <img src="{{dog.img}}" alt="" class="puppy-portrait img-fluid" (click)="onSelect(dog)">
+        </a>
       </div>
     </div>
   </div>
