--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <main>
   <div class="container">
     <div class="row">
-      <div class="col-md-2 offset-md-2">
+      <div class="col-md-2">
       </div>
       <div class="col-md-4">
         <a href="#" class="site-logo">
