--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-2">
       </div>
       <div class="col-md-4">
-        <a href="#" class="site-logo">
+        <a routerLink="about" class="site-logo">
           <img src="assets/img/logo.png" alt="sheep with suitcase" class="logo">
           <h1 class="app-title">{{title}}</h1>
         </a>
