--- a/src/app/dog/dog.component.html
+++ b/src/app/dog/dog.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-8 offset-md-2">
       <h2 class="main-header">Lista naszych pupili</h2>
-      <div *ngFor="let dog of dogs" class="puppy-wrapper" (click)="onSelect(event)">
+      <div *ngFor="let dog of dogs" class="puppy-wrapper" (click)="onSelect(dog)">
         <div class=" puppy-description ">
           {{ dog.id }}
           <h2 class="puppy-name ">{{ dog.name | uppercase }}</h2> {{ dog.weight}}
