--- a/src/app/dog/dog.component.html
+++ b/src/app/dog/dog.component.html
@@ -1,14 +1,23 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 offset-md-2">
+      <div *ngIf="selectedDog">
+        <h2>Szczegóły wybranego psa</h2>
+        <p><img src="{{selectedDog.img}}" class="puppy-portrait img-fluid"/></p>
+        <p>Id {{selectedDog.id}}</p>
+        <p>Nazwa - {{selectedDog.name}}</p>
+        <p>Opis:  {{selectedDog.info}}</p>
+
+      </div>
+
       <h2 class="main-header">Lista naszych pupili</h2>
       <div *ngFor="let dog of dogs" class="puppy-wrapper" (click)="onSelect(dog)">
         <div class=" puppy-description ">
           {{ dog.id }}
           <h2 class="puppy-name ">{{ dog.name | uppercase }}</h2> {{ dog.weight}}
         </div>
-        <a routerLink="../puppyDetails">
-          <img src="{{dog.img}} " alt="{{dog.name}} " class="puppy-portrait img-fluid ">
+        <a>
+          <img src="{{dog.img}} " alt="{{dog.name}} " class="puppy-portrait img-fluid">
         </a>
       </div>
     </div>
